More compat inlines and some modifier overwrites for display purposes

--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -1707,7 +1707,7 @@
   concept_tec_policy_trade_policy_alias: "$policy_trade_policy$"
 	concept_tec_policy_trade_policy_icon: "£policy£ $policy_trade_policy$"
 	concept_tec_policy_trade_policy_alias_icon: "£policy£ $policy_trade_policy$"
-	concept_tec_policy_trade_policy_desc: "$policy_trade_policy_desc$\n\nOptions:\n - ['concept_tec_policy_option_trade_policy_default_alias']\n - ['concept_tec_policy_option_trade_policy_consumer_goods_alias']\n - §R!§! ['concept_tec_policy_option_trade_policy_unity_alias']\n - §R!§! ['concept_tec_policy_option_trade_policy_trade_league_alias']\n - §R!§! ['concept_tec_policy_option_trade_policy_holy_covenant_alias']\n - §R!§! ['concept_tec_policy_option_trade_policy_social_alias']\n - ['concept_tec_policy_option_trade_policy_infrastructure_alias']\n - §R!§! ['concept_tec_policy_option_trade_policy_innovation_alias']\n - §R!§! ['concept_tec_policy_option_trade_policy_food_alias']\n - §R!§! ['concept_tec_policy_option_trade_policy_mining_alias']"
+	concept_tec_policy_trade_policy_desc: "$policy_trade_policy_desc$\n\nOptions:\n - ['concept_tec_policy_option_trade_policy_default_alias']\n - ['concept_tec_policy_option_trade_policy_consumer_goods_alias']\n - §R!§! ['concept_tec_policy_option_trade_policy_unity_alias']\n - §R!§! ['concept_tec_policy_option_trade_policy_trade_league_alias']\n - §R!§! ['concept_tec_policy_option_trade_policy_holy_covenant_alias']\n - §R!§! ['concept_tec_policy_option_trade_policy_social_alias']\n - ['concept_tec_policy_option_trade_policy_infrastructure_alias']\n - §R!§! ['concept_tec_policy_option_trade_policy_innovation_alias']\n - §R!§! ['concept_tec_policy_option_trade_policy_food_alias']\n - §R!§! ['concept_tec_policy_option_trade_policy_mining_alias']\n - §R!§! ['concept_tec_policy_option_trade_policy_mutual_aid_alias']"
 
 		concept_tec_policy_option_trade_policy_default: "$trade_policy_default$ Policy Option"
 		concept_tec_policy_option_trade_policy_default_alias: "$trade_policy_default$"
@@ -1769,8 +1769,14 @@
 		concept_tec_policy_option_trade_policy_mining_alias_icon: "£policy£ $trade_policy_mining$"
 		concept_tec_policy_option_trade_policy_mining_desc: "§YOption of ['concept_tec_policy_trade_policy_icon']§!\n\n§RHas Requirements§!\n\n$trade_policy_mining_desc$"
 
+		concept_tec_policy_option_trade_policy_mutual_aid: "$trade_policy_mutual_aid$ Policy Option"
+		concept_tec_policy_option_trade_policy_mutual_aid_alias: "$trade_policy_mutual_aid$"
+		concept_tec_policy_option_trade_policy_mutual_aid_icon: "£policy£ $trade_policy_mutual_aid$ Policy Option"
+		concept_tec_policy_option_trade_policy_mutual_aid_alias_icon: "£policy£ $trade_policy_mutual_aid$"
+		concept_tec_policy_option_trade_policy_mutual_aid_desc: "§YOption of ['concept_tec_policy_trade_policy_icon']§!\n\n§RHas Requirements§!\n\n$trade_policy_mutual_aid_desc$"
+
 	concept_tec_policy_goods_policy: "$policy_goods_policy$ Policy"
-  concept_tec_policy_goods_policy_alias: "$policy_goods_policy$"
+  	concept_tec_policy_goods_policy_alias: "$policy_goods_policy$"
 	concept_tec_policy_goods_policy_icon: "£policy£ $policy_goods_policy$ Policy"
 	concept_tec_policy_goods_policy_alias_icon: "£policy£ $policy_goods_policy$"
 	concept_tec_policy_goods_policy_desc: "$policy_goods_policy_desc$\n\nOptions:\n - ['concept_tec_policy_option_consumer_goods_minerals_alias']\n - ['concept_tec_policy_option_consumer_goods_mixed_alias']\n - §R!§! ['concept_tec_policy_option_consumer_goods_food_alias']"
@@ -1793,6 +1799,30 @@
 		concept_tec_policy_option_consumer_goods_food_alias_icon: "£policy£ $consumer_goods_food$"
 		concept_tec_policy_option_consumer_goods_food_desc: "§YOption of ['concept_tec_policy_goods_policy_icon']§!\n\n§RHas Requirements§!\n\n$consumer_goods_food_desc$"
 
+	concept_tec_policy_economic_policy: "$policy_economic_policy$ Policy"
+	concept_tec_policy_economic_policy_alias: "$policy_economic_policy$"
+	concept_tec_policy_economic_policy_icon: "£policy£ $policy_economic_policy$ Policy"
+	concept_tec_policy_economic_policy_alias_icon: "£policy£ $policy_economic_policy$"
+	concept_tec_policy_economic_policy_desc: "$policy_economic_policy_desc$\n\nOptions:\n - ['concept_tec_policy_option_economic_policy_civilian_alias']\n - ['concept_tec_policy_option_economic_policy_balanced_alias']\n - ['concept_tec_policy_option_economic_policy_military_alias']"
+
+		concept_tec_policy_option_economic_policy_civilian: "$economic_policy_civilian$ Policy Option"
+		concept_tec_policy_option_economic_policy_civilian_alias: "$economic_policy_civilian$"
+		concept_tec_policy_option_economic_policy_civilian_icon: "£policy£ $economic_policy_civilian$ Policy Option"
+		concept_tec_policy_option_economic_policy_civilian_alias_icon: "£policy£ $economic_policy_civilian$"
+		concept_tec_policy_option_economic_policy_civilian_desc: "§YOption of ['concept_tec_policy_economic_policy_icon']§!\n\n$economic_policy_civilian_desc$$mod_country_consumer_goods_produces_mult$: §G+25%§!\n$mod_country_alloys_produces_mult$: §R-25%§!"
+	
+		concept_tec_policy_option_economic_policy_balanced: "$economic_policy_balanced$ Policy Option"
+		concept_tec_policy_option_economic_policy_balanced_alias: "$economic_policy_balanced$"
+		concept_tec_policy_option_economic_policy_balanced_icon: "£policy£ $economic_policy_balanced$ Policy Option"
+		concept_tec_policy_option_economic_policy_balanced_alias_icon: "£policy£ $economic_policy_balanced$"
+		concept_tec_policy_option_economic_policy_balanced_desc: "§YOption of ['concept_tec_policy_economic_policy_icon']§!\n\n$economic_policy_balanced_desc$"
+	
+		concept_tec_policy_option_economic_policy_military: "$economic_policy_military$ Policy Option"
+		concept_tec_policy_option_economic_policy_military_alias: "$economic_policy_military$"
+		concept_tec_policy_option_economic_policy_military_icon: "£policy£ $economic_policy_military$ Policy Option"
+		concept_tec_policy_option_economic_policy_military_alias_icon: "£policy£ $economic_policy_military$"
+		concept_tec_policy_option_economic_policy_military_desc: "§YOption of ['concept_tec_policy_economic_policy_icon']§!\n\n$economic_policy_military_desc$$mod_country_alloys_produces_mult$: §G+25%§!\n$mod_country_consumer_goods_produces_mult$: §R-25%§!"
+	
 	concept_tec_policy_robot_pop_policy: "$policy_robot_pop_policy$ Policy"
   concept_tec_policy_robot_pop_policy_alias: "$policy_robot_pop_policy$"
 	concept_tec_policy_robot_pop_policy_icon: "£policy£ $policy_robot_pop_policy$ Policy"
@@ -2295,4 +2325,20 @@
 	concept_tec_eco_planet_tec_druids_alias: "$planet_tec_druids$"
 	concept_tec_eco_planet_tec_druids_alias_icon: "£job_tec_druid£ $planet_tec_druids$"
 	concept_tec_eco_planet_tec_druids_desc: "Inherits Percentage Modifiers from: ['concept_tec_eco_planet_jobs_productive_alias_icon']\nInherits All Modifiers from: ['concept_tec_eco_planet_priests_alias_icon']"
+# /
+
+# Traits
+	concept_tec_leader_trait_par_zealot: "$leader_trait_par_zealot$"
+	concept_tec_leader_trait_par_zealot_desc: "$leader_trait$\n$FLEET_EFFECTS_TXT$:\n$t$$MOD_SHIP_DISENGAGE_CHANCE_MULT$: §R-20%§!\n$leader_trait_par_zealot_effect$"
+
+
+	concept_tec_leader_trait_crusader: "$leader_trait_crusader$"
+	concept_tec_leader_trait_crusader_desc: "$leader_trait$\n$leader_trait_crusader_effect$\n$tec_loc_desc_separator$\n§L$leader_trait_crusader_desc$§!"
+
+
+	concept_tec_trait_stargazer: "$trait_stargazer$"
+	concept_tec_trait_stargazer_desc: "§L$trait_stargazer_desc$§!\n$MOD_POP_GROWTH_FROM_IMMIGRATION$: §G+25%§!\n$MOD_POP_RESETTLEMENT_COST_MULT$: §G-25%§!\n$MOD_POP_ENVIRONMENT_TOLERANCE$: §G+10%§!"
+
+	concept_tec_trait_aquatic: "$trait_aquatic$"
+	concept_tec_trait_aquatic_desc: "§L$trait_aquatic_desc$§!\n\n$trait_aquatic_tooltip$"
 # /
