--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -28,7 +28,7 @@
 
 # --------------------------- SCRIPTED LOC --------------------------------
 	tec_jump_empty:0 "\n\n"
-
+	tec_loc_desc_separator: "-----------"
 	tec_loc_warning:0 "£trigger_tec_warning£"
 
 	tec_loc_energy:0 "£energy£ Energy"
@@ -394,7 +394,7 @@ tec_ai_power_income_positive: "§G+[tec_ai_power_income_value]§!"
 tec_cui_aiauth_ethic: "£icon_ethics£"
 tec_cui_aiauth_ethic_effect: "Re-Align the §Y[This.GetName]§! AI Node to another §YEthic§!"
 tec_cui_ai_power: "$tec_loc_sr_tec_ai_power$: [FROM.tec_ai_power_income]"
-tec_cui_ai_power_effect: "§H$sr_tec_ai_power$§!\n$RESOURCES_STORED$§Y[FROM.tec_ai_power_stockpile]§!\n$RESOURCES_GAINED$[FROM.tec_ai_power_income]\n$PRODUCED$§G+[FROM.tec_ai_power_revenue]§!\n$CONSUMED$§R-[FROM.tec_ai_power_expenses]§!\n-----------\n$sr_tec_ai_power_desc$"
+tec_cui_ai_power_effect: "§H$sr_tec_ai_power$§!\n$RESOURCES_STORED$§Y[FROM.tec_ai_power_stockpile]§!\n$RESOURCES_GAINED$[FROM.tec_ai_power_income]\n$PRODUCED$§G+[FROM.tec_ai_power_revenue]§!\n$CONSUMED$§R-[FROM.tec_ai_power_expenses]§!\n$tec_loc_desc_separator$\n$sr_tec_ai_power_desc$"
 
 tec_cui_aiuth_fragment_admiral: "£admiral£"
 tec_cui_aiuth_fragment_general: "£general£"
