Small fixes all around

--- a/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
+++ b/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
@@ -32,9 +32,8 @@
  tr_expansion_galactic_ambition_vd_tooltip:0 "Our Habitats will gain a positive valuable §Y$tec_loc_deposit$§! based on the habitat features on creation, or via £unity£ Planetary Decision."
  tr_expansion_galactic_ambition_vd_delayed:0 "New habitats must be well designed and suited with adequate installations in order to ensure our species a better future."
 
- tr_expansion_finish_vd:0 "$tr_expansion_finish$"
  tr_expansion_finish_desc:4 "Max Districts (Non-artificial planets only): §G+1§!\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YOutreach§! will be available.§!\n"
- tr_expansion_finish_vd_desc:4 "Habitat cost: §G-20%§!\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YOutreach§! will be available.§!\n"
+ tr_expansion_finish_void_tooltip: "$MOD_PLANET_MAX_DISTRICTS_ADD$ on Habitats: §G+1§!\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YOutreach§! will be available.§!\n"
 
  tr_tec_expansion_a_new_life_cloning:1 "Embryonic Cryobanks"
  tr_tec_expansion_a_new_life_cloning_desc:0 "£pops£ §YOrganic Pop Assembly Speed§! increased by §G+10%§!."
