more fixes + tab for the win

--- a/localisation/english/replace/zz_evolved_councilors_l_english.yml
+++ b/localisation/english/replace/zz_evolved_councilors_l_english.yml
@@ -204,6 +204,16 @@
 		councilor_civic_tec_regular_evolutionary_architects_custom_modifier:0 "- $MOD_COUNTRY_MODIFY_SPECIES_COST_MULT$: §G-2.5%§!\n- Biological $species_trait_points_add$: §G+$@councilor_civic_tec_regular_evolutionary_architects_bonus_2$§!"
 		# Improve loc ^
 
+		councilor_civic_tec_regular_netrunners:0 "Net-Warden"
+		councilor_civic_tec_regular_netrunners_female:0 "$councilor_civic_tec_regular_netrunners$"
+		councilor_civic_tec_regular_netrunners_desc:0 "The $TITLE$s control and improve the operations of netrunners on the entire empire."
+		councilor_civic_tec_regular_netrunners_custom_modifier:0 "- Netunner output per Active Spy Network: §G+10%§!"
+
+		councilor_civic_tec_corporate_netrunners:0 "Net-Warden"
+		councilor_civic_tec_corporate_netrunners_female:0 "$councilor_civic_tec_regular_netrunners$"
+		councilor_civic_tec_corporate_netrunners_desc:0 "The $TITLE$s control and improve the operations of netrunners on the entire empire."
+		councilor_civic_tec_corporate_netrunners_custom_modifier:0 "- Netunner output per Active Spy Network: §G+10%§!"
+
 		councilor_civic_tec_regular_machine_cult:0 "Fabricator-Logis"
 		councilor_civic_tec_regular_machine_cult_female:0 "$councilor_civic_tec_regular_machine_cult$"
 		councilor_civic_tec_regular_machine_cult_desc:0 "The $TITLE$ serves as the head of sub-management regulators of the empire cult, ensuring the robotic development is accelerated and propagated amongst the population."
