--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -214,6 +214,14 @@
 	purge_necrophage_tooltip:0 "Affected Pops are gradually subsumed into the [From.GetSpeciesAdj] race, whether they wish it or not."
 	purge_necrophage_tooltip_delayed:0 "§LOnly the strongest may survive in a hostile galaxy. This way, their journey may continue as [From.GetSpeciesNamePlural].§!"
 
+# TECH replaces
+# ------------------------------------------------------------
+	# "Max upgraded Capital Buildings:\n $mod_planet_jobs_produces_mult$: §G+20%§!\n Max £district£ Districts: §R+10%§!"
+ tech_capital_productivity_1_effect:0 "Capital Buildings:\n  $mod_planet_jobs_produces_mult$: §G+5%§!\n $MOD_PLANETARY_ASCENSION_EFFECT_MULT$: §R+5%§!"
+ tech_capital_productivity_2_effect:0 "Upgraded Capital Buildings:\n  $mod_planet_jobs_produces_mult$: §G+10%§!\n  $MOD_PLANETARY_ASCENSION_EFFECT_MULT$: §R+10%§!"
+ tech_capital_productivity_3_effect:0 "Major Capital Buildings:\n  $mod_planet_jobs_produces_mult$: §G+30%§!\n  $MOD_PLANETARY_ASCENSION_EFFECT_MULT$: §R+15%§!"
+
+
 # EVENT replaces and additions
 # ------------------------------------------------------------
  # Added the event replace here
