--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -536,7 +536,7 @@
 	concept_tec_ruler_job_steward_icon: "£job_manager£ $job_steward$"
 	concept_tec_ruler_job_steward_plural: "$job_steward_plural$"
 	concept_tec_ruler_job_steward_plural_icon: "£job_manager£ $job_steward_plural$"
-	concept_tec_ruler_job_steward_desc: "§L$job_steward_desc$§!\n\n$job_steward_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_ruler$§!\n$tec_loc_c_produces$:\n\n"
+	concept_tec_ruler_job_steward_desc: "§L$job_steward_desc$§!\n\n$job_steward_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_specialist$§!\n$tec_loc_c_produces$:\n\n"
 
 	# Hive
 		concept_tec_ruler_job_tec_broodqueen_drone: "$job_tec_broodqueen_drone$"
