extracted and standardized covenant checks into scripted triggers

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -2119,10 +2119,11 @@ l_english:
 	tec_has_bioservant_assembly_buildings:0 "Has Bioservant Assembly buildings"
 	tec_has_cloning_assembly_buildings:0 "Has Organic Assembly buildings"
 	tec_has_machine_assembly_buildings:0 "Has Machine Assembly buildings"
-	tec_has_genetic_assembly_buildings:0 "Has Cytogenesis assembly buildings"
-	tec_has_zombie_assembly_buildings:0 "Has Zombie assembly buildings"
-	tec_has_spawning_assembly_buildings:0 "Has Biological assembly buildings"
-	tec_has_mixed_assembly_buildings:0 "Has Multipurpose assembly buildings"
+	tec_has_genetic_assembly_buildings:0 "Has Cytogenesis Assembly buildings"
+	tec_has_zombie_assembly_buildings:0 "Has Zombie Assembly buildings"
+	tec_has_spawning_assembly_buildings:0 "Has Biological Assembly buildings"
+	tec_has_mixed_assembly_buildings:0 "Has Multipurpose Assembly buildings"
+	tec_has_clinic_buildings: "Has Gene Clinic or similar buildings"
 	tec_only_one_assembly_building_on_planet:0 "§ROnly one £pop£ §YAssembly§! building per planet. Any other assembly building must be dismantled before this one can be built.\nReimaginator Machine Empires can't build assembly buildings.§!"
  # /
  # ------------------------------------------------- Secondary
