Adjustments pre-patch

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -1871,13 +1871,13 @@ l_english:
  # Netrunners
 	building_tec_netrunner_enforcer_center:0 "Cybernet Center"
 	building_tec_netrunner_enforcer_center_plural:0 "$building_tec_netrunner_enforcer_center$s"
-	building_tec_netrunner_enforcer_center_desc:0 "Tracked Spy Networks: §Y[owner.tec_count_spynetworks]§!\n\nTechnological Espionage Effect: §G+x§!"
+	building_tec_netrunner_enforcer_center_desc:0 "A repurposed hall of justice, this marvel of concrete and hyper-information fiber serves as logistic center for net-related operations."
 	building_tec_netrunner_enforcer_center_effect:0 "This $tec_loc_building$ tracks bonuses related to the jobs provided:\n\nTracked Spy Networks: §Y[owner.tec_count_spynetworks]§!\nTechnological Espionage Effect: §G+x§!\n\n"
 	building_tec_netrunner_enforcer_center_effect_nopeek:0 "§RERROR§!: Unauthorized access detected - Signal impossible to track"
 
 	building_tec_netrunner_criminal_center:0 "Cybernet Hideout"
 	building_tec_netrunner_criminal_center_plural:0 "$building_tec_netrunner_criminal_center$s"
-	building_tec_netrunner_criminal_center_desc:0 "TO DO."
+	building_tec_netrunner_criminal_center_desc:0 "Colossal installations repurposed as technological lair connected with information hyper-relays for easier access to intra and extra-nets."
 	building_tec_netrunner_criminal_center_effect:0 "This $tec_loc_building$ tracks bonuses related to the jobs provided:\n\nTracked Spy Networks: §Y[owner.tec_count_spynetworks]§!\nTechnological Espionage Effect: §G+x§!\n\n"
 	building_tec_netrunner_criminal_center_effect_nopeek:0 "§RERROR§!: Unauthorized access detected - Signal impossible to track"
 
