--- a/localisation/english/replace/zz_evolved_councilors_l_english.yml
+++ b/localisation/english/replace/zz_evolved_councilors_l_english.yml
@@ -207,12 +207,12 @@
 		councilor_civic_tec_regular_netrunners:0 "Net-Warden"
 		councilor_civic_tec_regular_netrunners_female:0 "$councilor_civic_tec_regular_netrunners$"
 		councilor_civic_tec_regular_netrunners_desc:0 "The $TITLE$s control and improve the operations of netrunners on the entire empire."
-		councilor_civic_tec_regular_netrunners_custom_modifier:0 "- Netunner output per Active Spy Network: §G+10%§!"
+		councilor_civic_tec_regular_netrunners_custom_modifier:0 "- Netrunner Output per Active Spy Network: §G+10%§!"
 
 		councilor_civic_tec_corporate_netrunners:0 "Net-Warden"
 		councilor_civic_tec_corporate_netrunners_female:0 "$councilor_civic_tec_regular_netrunners$"
 		councilor_civic_tec_corporate_netrunners_desc:0 "The $TITLE$s control and improve the operations of netrunners on the entire empire."
-		councilor_civic_tec_corporate_netrunners_custom_modifier:0 "- Netunner output per Active Spy Network: §G+10%§!"
+		councilor_civic_tec_corporate_netrunners_custom_modifier:0 "- Netrunner Output per Active Spy Network: §G+10%§!"
 
 		councilor_civic_tec_regular_machine_cult:0 "Fabricator-Logis"
 		councilor_civic_tec_regular_machine_cult_female:0 "$councilor_civic_tec_regular_machine_cult$"
