--- a/localisation/english/zz_evolved_tech_l_english.yml
+++ b/localisation/english/zz_evolved_tech_l_english.yml
@@ -177,7 +177,7 @@
  # --------------- Capital production
 	tech_tec_capital_productivity_4:0 "Imperative Productivity"
 	tech_tec_capital_productivity_4_desc:0 "Maximized efficiency is a must for our development, so the completely developed planets will reach degrees of productivity that will move us forward."
-	tech_tec_capital_productivity_4_effect:0 "Max upgraded Capital Buildings:\n $mod_planet_jobs_produces_mult$: §G+20%§!\n $MOD_PLANETARY_ASCENSION_EFFECT_MULT$: §R+20%§!"
+	tech_tec_capital_productivity_4_effect:0 "Max upgraded Capital Buildings:\n $mod_planet_jobs_produces_mult$: §G+20%§!\n $MOD_PLANETARY_ASCENSION_EFFECT_MULT$: §G+20%§!"
 
 	tech_tec_imperial_coordination:0 "Imperial Coordination"
 	tech_tec_imperial_coordination_desc:0 "Administration, managing and ensuring the prosperity of an interstellar is a hard task, but an effective use of resources and administrative orders, we will ensure a future for ourselves."
