ma44 stop peeking

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -1805,7 +1805,7 @@ l_english:
 
 	job_tec_geneticist:0 "Geneticist"
 	job_tec_geneticist_plural:0 "Geneticists"
-	job_tec_geneticist_desc:0 "Biologically dedicated researchers that try to discover all the secrets behind genetic manipullation and improvement, giving the population new ways to artificially evolved."
+	job_tec_geneticist_desc:0 "Biologically dedicated researchers that try to discover all the secrets behind genetic manipulation and improvement, giving the population new ways to artificially evolved."
 	job_tec_geneticist_effect_desc:0 "£job_tec_geneticist£ $job_tec_geneticist_plural$ turn §Y$tec_loc_cg$§! into §Y$tec_loc_research_resources$§! and §Y$tec_loc_organic_assembly$§!"
 	mod_job_tec_geneticist_add:0 "$job_tec_geneticist$ Jobs"
 	mod_job_tec_geneticist_per_pop:0 "§G+1§! $job_tec_geneticist$ Job Per $VALUE$ Pops"
@@ -1813,7 +1813,7 @@ l_english:
 
 	job_tec_geneticist_drone:0 "Geneticist Drone"
 	job_tec_geneticist_drone_plural:0 "Geneticist Drones"
-	job_tec_geneticist_drone_desc:0 "Dedicated scientific drones that use the knowledge and expertise of the collective regarding genetic manipullation and selective creation to improve both genetics and biological processes of it."
+	job_tec_geneticist_drone_desc:0 "Dedicated scientific drones that use the knowledge and expertise of the collective regarding genetic manipulation and selective creation to improve both genetics and biological processes of it."
 	job_tec_geneticist_drone_effect_desc:0 "£job_tec_geneticist£ $job_tec_geneticist_drone_plural$ turn §Y$tec_loc_basic_resources$§! into §Y$tec_loc_research_resources$§! and §Y$tec_loc_organic_assembly$§!"
 	mod_job_tec_geneticist_drone_add:0 "$job_tec_geneticist_drone$ Jobs"
 	mod_job_tec_geneticist_drone_per_pop:0 "§G+1§! $job_tec_geneticist_drone$ Job Per $VALUE$ Pops"
