worker coop shenanigans

--- a/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
@@ -1119,14 +1119,23 @@
 		tec_loc_assimilation_type_ethereal:0 "§HConsciousness Assimilation§!"
 		tec_loc_assimilation_type_total:0 "§HTotal Assimilation§!"
 
-		tec_loc_assimilation_fail_0:0 "£job_purge£ Fail rate: §R0%§!"
-		tec_loc_assimilation_fail_10:0 "£job_purge£ Fail rate: §R10%§!"
-		tec_loc_assimilation_fail_15:0 "£job_purge£ Fail rate: §R15%§!"
-		tec_loc_assimilation_fail_25:0 "£job_purge£ Fail rate: §R25%§!"
-		tec_loc_assimilation_fail_35:0 "£job_purge£ Fail rate: §R35%§!"
-		tec_loc_assimilation_fail_50:0 "£job_purge£ Fail rate: §R50%§!"
-		tec_loc_assimilation_fail_66:0 "£job_purge£ Fail rate: §R66%§!"
-		tec_loc_assimilation_fail_75:0 "£job_purge£ Fail rate: §R75%§!"
+		tec_loc_assimilation_fail_0:0 ""
+		tec_loc_assimilation_fail_10:0 ""
+		tec_loc_assimilation_fail_15:0 ""
+		tec_loc_assimilation_fail_25:0 ""
+		tec_loc_assimilation_fail_35:0 ""
+		tec_loc_assimilation_fail_50:0 ""
+		tec_loc_assimilation_fail_66:0 ""
+		tec_loc_assimilation_fail_75:0 ""
+
+		#tec_loc_assimilation_fail_0:0 "£job_purge£ Fail rate: §R0%§!"
+		#tec_loc_assimilation_fail_10:0 "£job_purge£ Fail rate: §R10%§!"
+		#tec_loc_assimilation_fail_15:0 "£job_purge£ Fail rate: §R15%§!"
+		#tec_loc_assimilation_fail_25:0 "£job_purge£ Fail rate: §R25%§!"
+		#tec_loc_assimilation_fail_35:0 "£job_purge£ Fail rate: §R35%§!"
+		#tec_loc_assimilation_fail_50:0 "£job_purge£ Fail rate: §R50%§!"
+		#tec_loc_assimilation_fail_66:0 "£job_purge£ Fail rate: §R66%§!"
+		#tec_loc_assimilation_fail_75:0 "£job_purge£ Fail rate: §R75%§!"
 	# /
 
 	living_standard_tec_template:0 "Template Standard"
