invasive + starbase modules upkeeps

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -814,7 +814,7 @@
 
 	civic_tec_regular_naval_traditions:0 "§L£tec_civic_feature£§!Naval Traditions"
 	civic_tec_regular_naval_traditions_desc:0 "['concept_tec_feature_civic']\n\nThis society has deeply ingrained traditions of glorious military Fleet."
-	civic_tec_regular_naval_traditions_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£mod_country_naval_cap_add£ Glory In Battle§!\n- When one of your fleets defeat other fleet, your empire gets the §Y£unity£ Glorius Victory§! modifier during 30 days, increasing §Y$tec_loc_job_output$§! by §G25%§!.\n- When one of your fleets is destroyed in battle, your Empire gets the §Y£unity£ Woe to the Vanquished!§! modifier during 30 days, increasing §Y£mod_country_naval_cap_add£ Ship Weapon Damage§! by §G25%§!.\n\n§HThese modifiers can't be refreshed until the effect has expired.§!"
+	civic_tec_regular_naval_traditions_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£mod_country_naval_cap_add£ Glory In Battle§!\n- When one of your fleets defeat other fleet, your empire gets the §Y£unity£ Glorious Victory§! modifier during 30 days, increasing §Y$tec_loc_job_output$§! by §G25%§!.\n- When one of your fleets is destroyed in battle, your Empire gets the §Y£unity£ Woe to the Vanquished!§! modifier during 30 days, increasing §Y£mod_country_naval_cap_add£ Ship Weapon Damage§! by §G25%§!.\n\n§HThese modifiers can't be refreshed until the effect has expired.§!"
 
 	civic_tec_regular_land_of_plenty:0 "§L£tec_civic_feature£§!Land of Plenty"
 	civic_tec_regular_land_of_plenty_desc:0 "['concept_tec_feature_civic']\n\nMost of the cultural development of this society has moved around prosperity and richness instead of unnecessary warfare or conflicts, and so they developed a system of production with a prosperous and sustainable future."
