--- a/localisation/english/replace/zz_evolved_origins_l_english.yml
+++ b/localisation/english/replace/zz_evolved_origins_l_english.yml
@@ -260,3 +260,18 @@ l_english:
 
 # EVOLVED
 # ------------------------------------------------------------
+ # ------------------------------------------------- Mega origins
+
+ # /
+
+ # ------------------------------------------------- Hive World
+	origin_tec_hive_world:0 "Planetary Biomorph"
+	origin_tec_hive_world_desc:0 "A stable planetary unification has allowed this civilization to prosper and grow."
+
+	origin_tec_hive_world_tooltip:3 ""
+
+
+
+ # /
+
+# /
