--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -950,6 +950,42 @@ l_english:
 	mod_job_tec_diplomat_per_pop_short:0 "\n§G+1§! £mod_job_tec_diplomat_add£ per $VALUE$ £pop£"
 	mod_job_tec_diplomat_add:0 "$job_tec_diplomat$ Jobs"
 
+	# Chemical Barons
+		job_tec_chemical_baron:0 "Chemical Baron"
+		job_tec_chemical_baron_plural:0 "Chemical Barons"
+		job_tec_chemical_baron_desc:0 "An elite of economically and property-wise rich myriad of crime-lords, bored aristocrats, self-nominated taskmasters and business tycoons, who control the creation, transport and distribution of highly addictive drugs and chemicals to subdue the population... and themselves."
+		job_tec_chemical_baron_effect_desc:0 "£job_tec_chemical_baron£ $job_tec_chemical_baron_plural$ TO DO."
+		mod_job_tec_chemical_baron_per_pop:0 "§G+1§! $job_tec_chemical_baron$ Job Per $VALUE$ Pops"
+		mod_job_tec_chemical_baron_per_pop_short:0 "\n§G+1§! £mod_job_tec_chemical_baron_add£ per $VALUE$ £pop£"
+		mod_job_tec_chemical_baron_add:0 "$job_tec_chemical_baron$ Jobs"
+
+		building_tec_chemical_baron_generic:0 "Chem-dustrial Hideout"
+		building_tec_chemical_baron_generic_plural:0 "Chem-dustrial Hideouts"
+		building_tec_chemical_baron_generic_desc:0 "TO DO"
+		building_tec_chemical_baron_generic_effect:0 ""
+
+		building_tec_chemical_baron_motes:0 "Chem-plosives Factory"
+		building_tec_chemical_baron_motes_plural:0 "Chem-plosives Factories"
+		building_tec_chemical_baron_motes_desc:0 "These group of industrial sites produce highly addictive volatile motes, serving as both a stimulant for simple tasks and an useful explossive. Or, sometimes, both."
+		building_tec_chemical_baron_motes_effect:0 "TO DO"
+
+		building_tec_chemical_baron_crystals:0 "Chem-House of Crystals"
+		building_tec_chemical_baron_crystals_plural:0 "Chem-Houses of Crystals"
+		building_tec_chemical_baron_crystals_desc:0 "Here the best raw crystals are produced and cut, to later be either transported raw as focusing lens or crumbled into micro-particles for recreative and highly addictive consumption, to the point its uses are even considered an ''art''."
+		building_tec_chemical_baron_crystals_effect:0 "TO DO"
+
+		building_tec_chemical_baron_gases:0 "Chem-Gas Refinery"
+		building_tec_chemical_baron_gases_plural:0 "Chem-Gas Refineries"
+		building_tec_chemical_baron_gases_desc:0 "Raw after raw of gas-silos filled with refined exotic and highly pure gases, which produce a considerable stimulous in intellectual facilities of those that consume it, also serving as raw material for energy projections and containment."
+		building_tec_chemical_baron_gases_effect:0 "TO DO"
+
+		building_tec_chemical_baron_zro:0 "Chem-Dust Facility"
+		building_tec_chemical_baron_zro_plural:0 "Chem-Dust Facilities"
+		building_tec_chemical_baron_zro_desc:0 "When it comes to refining psionic residuum, these facilities remix Zro with other addictive elements to create a powerfun concoction that satisfies even the most "
+		building_tec_chemical_baron_zro_effect:0 "TO DO"
+
+	# /
+
  # /
 
  # ------------------------------------------------- Ruler Replace Corporate (Generic)
@@ -1185,6 +1221,7 @@ l_english:
 	mod_job_tec_corpo_litho_manager_per_pop_short:0 "\n§G+1§! £mod_job_tec_corpo_litho_manager_add£ per $VALUE$ £pop£"
 	mod_job_tec_corpo_litho_manager_add:0 "$job_tec_corpo_litho_manager$ Jobs"
  # /
+ # 
 
  # ------------------------------------------------- Specialist Regular (Generic)
 	job_tec_mercenary:0 "Mercenary"
@@ -1328,6 +1365,7 @@ l_english:
 	building_tec_commercial_flagship_desc:0 "The whole representation of the corporate desires and outcomes, this monument to trade, commerce and business bright with its own intensity."
  # /
 #/
+
 
 # ------------------------------------------------------------
 # Hive Civics (&jobs) 
