--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -1,5 +1,12 @@
 ﻿l_english:
 
+# ------------------------------------------------- Vanilla replace
+ TRAIT_INVASIVE_EFFECT: "§EPer §YNon-Plantoid §RNegative§!§! trait selected:§!\n - Habitability, Growth and Assembly: §G+5%§!\n\n§EPer §YNon-Plantoid §GPositive§!§! trait selected:§!\n - Habitability, Growth and Assembly: §R-2.5%§!"
+	#OLD_TRAIT_INVASIVE_EFFECT: "§YCan only select negative or botanical traits§!\n\nHabitability: §G+5%§! for each negative trait selected\nPop Growth Speed: §G+5%§! for each negative trait selected"
+
+# /
+
+
 # ------------------------------------------------- Evolved Traits
 	trait_industrious_lithoid:0 "Industrious"
 	trait_industrious_lithoid_desc:0 "§LMembers of this lithoid species are known for their instinctive and efficient nature when it comes to finding the richest and more valuable minerals, either for self-sufficiency or any construction.§!\n"
