--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -966,22 +966,26 @@ l_english:
 
 		building_tec_chemical_baron_motes:0 "Chem-plosives Factory"
 		building_tec_chemical_baron_motes_plural:0 "Chem-plosives Factories"
-		building_tec_chemical_baron_motes_desc:0 "These group of industrial sites produce highly addictive volatile motes, serving as both a stimulant for simple tasks and an useful explossive. Or, sometimes, both."
+		building_tec_chemical_baron_motes_desc:0 "These group of industrial sites produce highly addictive volatile motes, serving as stimulant for simple tasks and an useful explossive; Sometimes, both."
+		building_tec_chemical_baron_motes_desc_hive:0 "These group of industrial sites produce highly addictive volatile motes, serving as stimulant for simple tasks and an useful explossive; Sometimes, both."
 		building_tec_chemical_baron_motes_effect:0 "TO DO"
 
 		building_tec_chemical_baron_crystals:0 "Chem-House of Crystals"
 		building_tec_chemical_baron_crystals_plural:0 "Chem-Houses of Crystals"
 		building_tec_chemical_baron_crystals_desc:0 "Here the best raw crystals are produced and cut, to later be either transported raw as focusing lens or crumbled into micro-particles for recreative and highly addictive consumption, to the point its uses are even considered an ''art''."
+		building_tec_chemical_baron_crystals_desc_hive:0 "Here the best raw crystals are produced and cut, to later be either transported raw as focusing lens or crumbled into micro-particles for drone stimulation, improving off-grid creative thinking within collective thought."
 		building_tec_chemical_baron_crystals_effect:0 "TO DO"
 
 		building_tec_chemical_baron_gases:0 "Chem-Gas Refinery"
 		building_tec_chemical_baron_gases_plural:0 "Chem-Gas Refineries"
 		building_tec_chemical_baron_gases_desc:0 "Raw after raw of gas-silos filled with refined exotic and highly pure gases, which produce a considerable stimulous in intellectual facilities of those that consume it, also serving as raw material for energy projections and containment."
+		building_tec_chemical_baron_gases_desc_hive:0 "Raw after raw of gas-silos filled with refined exotic and highly pure gases, which produce a considerable stimulous in intellectual facilities of drones, also serving as raw material for energy projections and containment."
 		building_tec_chemical_baron_gases_effect:0 "TO DO"
 
 		building_tec_chemical_baron_zro:0 "Chem-Dust Facility"
 		building_tec_chemical_baron_zro_plural:0 "Chem-Dust Facilities"
-		building_tec_chemical_baron_zro_desc:0 "When it comes to refining psionic residuum, these facilities remix Zro with other addictive elements to create a powerfun concoction that satisfies even the most "
+		building_tec_chemical_baron_zro_desc:0 "When it comes to refining psionic residuum, these facilities remix Zro with other addictive elements to create a powerfun concoction that satisfies even the most sybarite."
+		building_tec_chemical_baron_zro_desc_hive:0 "When it comes to refining psionic residuum, these facilities remix Zro with other addictive elements to create a powerfun concoction that greatly amplifies the drone-hivemind connection."
 		building_tec_chemical_baron_zro_effect:0 "TO DO"
 
 	# /
